# runz

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  runz.yml
.github/workflows/: build-and-publish.yml
assets/: runz.graphite
assets/icons/: icon.icns
example/api/: main.go
example/queue/: package.json  worker.js
example/web/: package.json
example/web/src/: app.jsx  index.css  main.jsx
frontend/: package.json  vite.config.ts
frontend/src/: app.tsx  main.css  main.tsx  terminal.ts  types.ts
frontend/src/components/: error-boundary.tsx  portal.tsx  theme-selector.tsx  window-buttons.tsx  xterm.tsx
frontend/src/hooks/: use-xterm-theme.ts
frontend/src/utils/: ansi.ts  color.ts
npm/: bin.js  download.js  package.json
src/: cmd.rs  config.rs  detach.rs  emitter.rs  main.rs  pty_manager.rs
