[package]
name = "runz"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
toml = "0.8.20"
portable-pty = "0.9.0"
anyhow = "1.0.98"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.21.3"
path-clean = "1.0.1"
rfd = "0.15.3"
wry = { version = "0.51.2", features = ["devtools"] }
tao = "0.33.0"
muda = "0.16.1"
daemonize = "0.5.0"
ctrlc = "3.4.6"
signal-hook = "0.3.17"
tiny_http = "0.12.0"
image = "0.25.6"
slugify = "0.1.0"
open = "5.3.2"
